--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
