--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
-    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
